src/process/build/log/idf_py_stderr_output_134321
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c: In function 'app_main':
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:181:29: error: 'pic' undeclared (first use in this function)
  181 |     uint32_t ARRAY_LENGTH = pic->width * pic->height * 3;               // number of pixels in the jpg image x 3
      |                             ^~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:181:29: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4712: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
